backend/mssql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-statefulset
  namespace: ns-react-app-master
spec:
  serviceName: mssql-service  # Nombre del servicio para los pods
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql #Label para el POD
    spec: #POD
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-storage
          mountPath: /var/opt/mssql  # Montaje del volumen en el contenedor
  volumeClaimTemplates:
  - metadata:
      name: mssql-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 500Mi  # Espacio de almacenamiento asignado
