backend/webapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prime-number-webapi
  namespace: ns-react-app-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prime-number-webapi
  template:
    metadata:
      labels:
        app: prime-number-webapi
    spec:
      containers:
      - name: prime-number-webapi
        image: localhost:32000/prime-number-backend:master-5ba7acedd022d29484b4053bdac13f61b3fd081b
        ports:
        - containerPort: 80
