backend/webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prime-number-webapi-service
  namespace: ns-react-app-master
spec:
  selector:
    app: prime-number-webapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
